--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.4.5",
     "@nuxt/image": "^1.7.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@pinia/nuxt": "^0.5.3",
     "@radix-icons/vue": "^1.0.0",
+    "@types/uuid": "^10.0.0",
+    "@vueuse/core": "^10.11.0",
+    "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.12",
     "nuxt": "^3.12.4",
+    "pinia": "^2.2.1",
     "radix-vue": "^1.9.3",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "vue": "latest"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
