--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.5.3",
     "@radix-icons/vue": "^1.0.0",
+    "@tanstack/vue-query": "^5.51.21",
     "@types/uuid": "^10.0.0",
+    "@vee-validate/nuxt": "^4.13.2",
     "@vueuse/core": "^10.11.0",
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.0",
