--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/icon": "^1.4.5",
     "@nuxt/image": "^1.7.0",
+    "@nuxt/ui": "^2.18.4",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.5.3",
     "@radix-icons/vue": "^1.0.0",
@@ -33,7 +34,6 @@
     "vue": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1"
   },
   "overrides": {
     "vue": "latest"
